fix: input demo canvas overlapping in iframe

--- a/week7/handlingKeyEvents/styles.css
+++ b/week7/handlingKeyEvents/styles.css
@@ -80,6 +80,7 @@ section {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     column-gap: auto;
     place-items: center;
+    min-width: 800px;
 }
 
 .container-half {
